# kevllm-wiki

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/graphify/: SKILL.md
.agents/skills/karpathy-guidelines/: SKILL.md
docs/: ARCHITECTURE.md  CLI_SPEC.md  DECISIONS.md  FOLDER_STRUCTURE.md  FUTURE_PHASE_2.md  INGEST_WORKFLOW.md  MVP_SCOPE.md  NOTE_SCHEMA.md  PRD.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  TECH_STACK.md
schema/: CLAUDE.md  SCHEMA.md
src/llm_wiki/: cli.py  commands.py  core.py
src/llm_wiki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_contracts.py
